variables.RunFour.scala.error
Erreur de compilation :
RunFour:9: error: not found: value stop
    stop;
    ^