variables.RunFour.scala.code
var a=0

while (true){
  avance();
  if (estSurBiscuit()){
    a=a+1
  }
	if (a==4){
    stop;
  }
}